# CookyTape-VST

./: CMakeLists.txt  README.md  neural_net_weights.json
plugin/: Plugin.cpp  Plugin.h
